# imersao03

./: README.md  app.py  etl.py  globals.py  pyproject.toml  server.py  ui.py  utils.py
.github/workflows/: etl.yml  ipca.yml
dados/: df_diaria.parquet  df_mensal.parquet  df_previsao.parquet  tracking.csv
